kubernetes-home-ops/kubernetes/apps/ai/dex/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.smadja.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dex
spec:
  hostnames:
    - mcp-dex.smadja.dev
  parentRefs:
    - name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - name: dex
          port: 5556
